<resources>
    <string name="app_name" translatable="false">SuperVPN</string>
    <string name="ads_message_inter">VPN is running, please wait…</string>
    <string name="ads_message_open">Welcome back to SuperVPN</string>
    <string name="ads_message_notice">This action can contains ads</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language_fragment">Language fragment</string>
    <string name="lang_default">Default</string>
    <string name="text_error">An error occurred</string>
    <string name="setting_language">Language</string>
    <string name="vpn" translatable="false">VPN</string>
    <string name="fast_and_safe">Fast &amp; Safe</string>
    <string name="setting_vpn_fast_and_safe">VPN Fast and Safe</string>
    <string name="setting_vpn_fast_and_safe_desc">Get unlimited access to all features, ad-free.</string>
    <string name="setting_trial">Free trial 3 days</string>
    <string name="setting_upgrade">Upgrade</string>
    <string name="recommend">Recommend</string>
    <string name="setting_app_proxy">App Filter</string>
    <string name="setting_app_proxy_desc">Choose which apps will connect to the Internet through VPN</string>
    <string name="setting_ads_block">Ads block</string>
    <string name="setting_ads_desc">Limit ads while browsing the web</string>
    <string name="setting_dns_default">DNS default</string>
    <string name="dns_desc">Select and save a DNS server as the default for future use of the application.</string>
    <string name="setting_rate">Rate</string>
    <string name="setting_share">Share</string>
    <string name="setting_feedback">Feedback</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="vn">Việt Nam</string>
    <string name="us">United States</string>
    <string name="kr">Korea</string>
    <string name="arb">Arab</string>
    <string name="ind">India</string>
    <string name="jp">Japan</string>
    <string name="germany">Germany</string>
    <string name="england">England</string>
    <string name="russian">Russian</string>
    <string name="ukraine">Ukraine</string>
    <string name="spain">Spain</string>
    <string name="belgium">Belgium</string>
    <string name="portugal">Portugal</string>
    <string name="italia">Italia</string>
    <string name="belarus">Belarus</string>
    <string name="switzerland">Switzerland</string>
    <string name="poland">Poland</string>
    <string name="finland">Finland</string>
    <string name="slovania">Slovania</string>
    <string name="netherlands">Netherlands</string>
    <string name="sweden">Sweden</string>
    <string name="austria">Austria</string>
    <string name="hungarian">Hungarian</string>
    <string name="bulgarian">Bulgarian</string>
    <string name="greece">Greece</string>
    <string name="moldova">Moldova</string>
    <string name="serbia">Serbia</string>
    <string name="norway">Norway</string>
    <string name="czech">Czech</string>
    <string name="romania">Romania</string>
    <string name="australia">Australia</string>
    <string name="indonesia">Indonesia</string>
    <string name="china">China</string>
    <string name="hongkong">Hongkong</string>
    <string name="taiwan">Taiwan</string>
    <string name="singapore">Singapore</string>
    <string name="philipine">Philipine</string>
    <string name="malaysia">Malaysia</string>
    <string name="thailand">Thailand</string>
    <string name="cambodia">Cambodia</string>
    <string name="laos">Laos</string>
    <string name="iran">Iran</string>
    <string name="iraq">Iraq</string>
    <string name="turkey">Turkey</string>
    <string name="pakistan">Pakistan</string>
    <string name="arab">Arab</string>
    <string name="uae">Uae</string>
    <string name="oman">Oman</string>
    <string name="uzbekistan">Uzbekistan</string>
    <string name="qatar">Qatar</string>
    <string name="canada">Canada</string>
    <string name="mexico">Mexico</string>
    <string name="brazil">Brazil</string>
    <string name="ecuador">Ecuador</string>
    <string name="peru">Peru</string>
    <string name="colombia">Colombia</string>
    <string name="argentina">Argentina</string>
    <string name="chile">Chile</string>
    <string name="venezuela">Venezuela</string>
    <string name="bolivia">Bolivia</string>
    <string name="paraguay">Paraguay</string>
    <string name="uruguay">Uruguay</string>
    <string name="nigeria">Nigeria</string>
    <string name="mozambique">Mozambique</string>
    <string name="morocco">Morocco</string>
    <string name="south_africa">South Africa</string>
    <string name="connecting">Connecting…</string>
    <string name="connected">Connected</string>
    <string name="private_internet">Private internet</string>
    <string name="disconnecting">Disconnecting…</string>
    <string name="disconnected">Disconnected</string>
    <string name="connect_error">Connect Failed</string>
    <string name="tap_to_connect">Tab to Connect</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="home_settime">Choose time connection</string>
    <string name="home_settime_1">After one hour</string>
    <string name="btn_ok">OK</string>
    <string name="common_ok">Ok</string>
    <string name="btn_save">Save</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_reset">Reset</string>
    <string name="auto">Auto</string>
    <string name="min_60">60 Minutes</string>
    <string name="min_90">90 Minutes</string>
    <string name="min_120">120 Minutes</string>
    <string name="setting">Setting</string>
    <string name="close">Close</string>
    <string name="setting_app_proxy_success">App VPN filter is set</string>
    <string name="setting_ads_limit">Ads limit is set</string>
    <string name="setting_dns_set">DNS is set</string>
    <string name="reconnect_to_take_effect">Please return to the home screen and reset the VPN for the settings to take effect</string>
    <string name="home_reconnect_to_take_effect">Please reset the VPN for the settings to take effect</string>
    <string name="premium_purchase_success">Purchase successfully</string>
    <string name="select_vpn">Select VPN</string>
    <string name="dns_only">DNS only</string>
    <string name="confirm_dns">VPN Not Active</string>
    <string name="confirm_dns_msg">No VPN Server selected. Please select a VPN server.</string>
    <string name="btn_agree">Agree</string>
    <string name="confirm_collect">Your Privacy, Your Control</string>
    <string name="confirm_accept_msg">To complete your subscription, this app collects your Advertising ID to verify registration, enhance service quality, and prevent fraudulent activity. Do you agree to this data collection?</string>
    <string name="accept_continue">Accept and Continue</string>
    <string name="go_back">Back</string>
    <string name="leave_anyway">Exit</string>
    <string name="confirm_accept_msg_1">Hey there, thank you for using SuperVPN</string>
    <string name="confirm_accept_msg_2">We only collect minimum data needed to keep your connection smooth and secure. Here is the quick breakdown.</string>
    <string name="confirm_accept_msg_3">Advertising ID: help to track your subscription and using VPN.</string>
    <string name="confirm_accept_msg_4">That\'s it. No tracking your internet traffic, no selling your data. We have no logs policy and follow privacy laws. Your data stays yours.</string>
    <string name="exit">Are you sure want to exit?</string>
    <string name="exit_msg">According to user data protection policies, we can not provide our services without your consent. Are you sure to exit?</string>
    <string name="premium_title">VPN Fast &amp; Safe Pro</string>
    <string name="premium_sub1">No ads</string>
    <string name="premium_sub2">Fast and stable speed</string>
    <string name="premium_sub3">Worldwide location</string>
    <string name="premium_sub4">App Filter</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="premium_desc">Enjoy the first 3 days free, then the plan auto-renews.</string>
    <string name="premium_start_trial">Start trial</string>
    <string name="premium_trial_desc">Recurring billing. Cancel anytime on Google Play Store.</string>
    <string name="status_on">On</string>
    <string name="status_off">Off</string>
    <string name="dg_vpn_permission_title">Super VPN can not be connect with authority</string>
    <string name="dg_vpn_permission_guide">Press “OK” to allow the VPN connection.</string>
    <string name="connection_request">Connection request</string>
    <string name="vpn_des1">SupperVPN is requesting  permission to set up a VPN connection that will allow it to monitor network traffic. Only allow this if you trust the source.</string>
    <string name="vpn_des2">An icon will be shown at the top of your screen while the VPN is in use. Allow?</string>
    <string name="vpn_reason">Why is VPN permission needed?</string>
    <string name="vpn_reason_des">The app requires VPN permission to establish a secure and encrypted connection between your device and the server. Granting this permission allows the app to protect your privacy and encrypt your data, especially when using public networks.</string>
    <string name="got_it">Got it</string>
    <string name="text_rate_hint">The best rank we could get :)</string>
    <string name="text_rate_0">If you can rate us, we will be very grateful and continue to work hard to bring you a better experience.</string>
    <string name="text_rate_1">Thanks for your review and please give us some feedback.</string>
    <string name="text_rate_5">Thanks so much for your review!</string>
    <string name="text_rate">Rate</string>
    <string name="text_rate_app">Reviews on Google Play</string>
    <string name="fb_common_unable_find_market">Cannot find market app</string>
    <string name="text_feedback_problem">Tell us what problem you encountered.</string>
    <string name="text_type">Type</string>
    <string name="text_type_feature">Feature quality</string>
    <string name="text_type_crash">Crash</string>
    <string name="text_type_bug">Bug</string>
    <string name="text_type_other">Other</string>
    <string name="text_send">Send</string>
    <string name="text_feedback_hint">Please give us more details so we can identify and resolve your issue faster (at least 6 characters)</string>
    <string name="text_thanks_feedback">Thanks for your feedback</string>
    <string name="text_feedback_content">We will fix this issue in a future version. Sorry for the inconvenience.</string>
    <string name="msg_device_does_not_support_this_feature">This feature is not supported for this device!</string>
    <string name="search_app">search app..</string>
    <string name="exit_app">Exit App?</string>
    <string name="exit_app_msg">Are you sure to exit?</string>
    <string name="free">Free</string>
    <string name="premium">Premium</string>
    <string name="unlock_premium">Unlock VPN Premium</string>
    <string name="get_premium">Get Premium</string>
    <string name="watch_ads">Watch ads to Connect</string>
    <string name="guide_1">Just one touch to connect.</string>
    <string name="guide_2">Multiple VPN servers in different countries</string>
    <string name="guide_3">Protect your online privacy</string>
    <string name="network_provider">Network provider</string>
    <string name="pincode">Pin code</string>
    <string name="timezone">Time zone</string>
    <string name="duration">Duration</string>
</resources>