<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_popup"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:paddingVertical="@dimen/size22">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_close"
        android:layout_width="@dimen/size32"
        android:layout_height="@dimen/size32"
        android:layout_gravity="top|end"
        android:foreground="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_close" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/confirm_collect"
        android:textAppearance="@style/App_TextAppearanceBody1"
        android:textSize="24sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_content_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size20"
        android:text="@string/confirm_accept_msg_1"
        android:textColor="@color/text_gray_1"
        android:textSize="@dimen/text_medium"
        android:maxLines="10"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_content_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size20"
        android:text="@string/confirm_accept_msg_2"
        android:textColor="@color/text_gray_1"
        android:maxLines="10"
        android:textSize="@dimen/text_medium"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_content_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size20"
        android:text="@string/confirm_accept_msg_3"
        android:textColor="@color/text_gray_1"
        android:textSize="@dimen/text_medium"
        android:maxLines="10"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_content_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size20"
        android:text="@string/confirm_accept_msg_4"
        android:textColor="@color/text_gray_1"
        android:textSize="@dimen/text_medium"
        android:maxLines="10"/>

    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>


    <LinearLayout
        android:id="@+id/accept"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="@dimen/size36"
        android:background="@drawable/bg_start_trial"
        android:foreground="?selectableItemBackgroundBorderless"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="middle"
            android:text="@string/accept_continue"
            android:textAllCaps="true"
            android:textAppearance="@style/App_TextAppearanceTitle2"
            android:textColor="@color/text_gray_1" />
    </LinearLayout>

</LinearLayout>