<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_popup"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingHorizontal="30dp"
        android:paddingVertical="@dimen/size22">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/confirm_collect"
            android:textAppearance="@style/App_TextAppearanceBody1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:text="@string/confirm_accept_msg"
            android:textColor="@color/text_gray_1"
            android:textSize="@dimen/text_medium"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:foreground="?selectableItemBackgroundBorderless"
            android:gravity="center"
            android:paddingStart="@dimen/margin_medium"
            android:paddingTop="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_medium"
            android:paddingBottom="@dimen/margin_small"
            android:text="@string/btn_cancel"
            android:textAllCaps="false"
            android:textAppearance="@style/App_TextAppearanceButton2"
            android:textColor="@color/text_gray_2"
            app:layout_constraintEnd_toStartOf="@+id/btn_ok"
            app:layout_constraintTop_toBottomOf="@+id/tv_content" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:foreground="?selectableItemBackgroundBorderless"
            android:gravity="center"
            android:paddingStart="@dimen/margin_24"
            android:paddingTop="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_24"
            android:paddingBottom="@dimen/margin_small"
            android:text="@string/btn_agree"
            android:textAllCaps="false"
            android:textAppearance="@style/App_TextAppearanceButton2"
            android:textColor="@color/successColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>